Unnötige Beispielfolien entfernt

--- a/Präsentation/Präsentation.tex
+++ b/Präsentation/Präsentation.tex
@@ -50,7 +50,7 @@
 
 
 \section{Worum geht es eigentlich?} 
-\subsection{Listen I}
+%\subsection{Listen I}
 \begin{frame}
 \frametitle{Worum geht es eigentlich?}
 \begin{itemize}
@@ -83,102 +83,18 @@
 \end{itemize} 
 \end{frame}
 
-\begin{frame}
-\frametitle{Aufz\"ahlung mit einzelnen Pausen}
-\begin{itemize}
-\item  Einf\"uhrungskurs in \LaTeX{} \pause 
-\item  Kurs 2 \pause 
-\item  Seminararbeiten und Pr\"asentationen mit \LaTeX{} \pause 
-\item  Die Beamerclass
-\end{itemize} 
-\end{frame}
-
-\begin{frame}
-\frametitle{Aufz\"ahlung mit Pausen}
-\begin{itemize}[<+->]
-\item  Einf\"uhrungskurs in \LaTeX{} 
-\item  Kurs 2 
-\item  Seminararbeiten und Pr\"asentationen mit \LaTeX{} 
-\item  Die Beamerclass
-\end{itemize} 
-\end{frame}
 
 
-\subsection{Listen II}
-\begin{frame}
-\frametitle{Numerierte Liste}
-\begin{enumerate}
-\item  Einf\"uhrungskurs in \LaTeX{} 
-\item  Kurs 2
-\item  Seminararbeiten und Pr\"asentationen mit \LaTeX{} 
-\item  Die Beamerclass
-\end{enumerate}
-\end{frame}
-
-\begin{frame}
-\frametitle{Numerierte Liste mit einzelnen Pausen}
-\begin{enumerate}
-\item  Einf\"uhrungskurs in \LaTeX{} \pause 
-\item  Kurs 2 \pause 
-\item  Seminararbeiten und Pr\"asentationen mit \LaTeX{} \pause 
-\item  Die Beamerclass
-\end{enumerate}
-\end{frame}
-
-\begin{frame}
-\frametitle{Numerierte Liste mit  Pausen}
-\begin{enumerate}[<+->]
-\item  Einf\"uhrungskurs in \LaTeX{} 
-\item  Kurs 2 
-\item  Seminararbeiten und Pr\"asentationen mit \LaTeX{} 
-\item  Die Beamerclass
-\end{enumerate}
-\end{frame}
-
-\section{Abschnitt Nr.3} 
-\subsection{Tabellen}
-\begin{frame}
-\frametitle{Tabellen}
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{Zeitpunkt} & \textbf{Kursleiter} & \textbf{Titel} \\
-\hline
-WS 04/05 & Sascha Frank &  Erste Schritte mit \LaTeX{}  \\
-\hline
-SS 05 & Sascha Frank & \LaTeX{} Kursreihe \\
-\hline
-\end{tabular}
-\end{frame}
 
 
-\begin{frame}
-\frametitle{Tabellen mit Pause}
-\begin{tabular}{c c c}
-A & B & C \\ 
-\pause 
-1 & 2 & 3 \\  
-\pause 
-A & B & C \\ 
-\end{tabular} 
-\end{frame}
 
 
-\section{Abschnitt Nr. 4}
-\subsection{Bl\"ocke}
-\begin{frame}
-\frametitle{Bl\"ocke}
-
-\begin{block}{Blocktitel}
-Blocktext 
-\end{block}
-
-\begin{exampleblock}{Blocktitel}
-Blocktext 
-\end{exampleblock}
 
 
-\begin{alertblock}{Blocktitel}
-Blocktext 
-\end{alertblock}
-\end{frame}
+
+
+
+
+
+
 \end{document}
