--- a/Präsentation/Präsentation.tex
+++ b/Präsentation/Präsentation.tex
@@ -1,8 +1,33 @@
-\documentclass[hyperref={pdfpagelabels=false}]{beamer}
+\documentclass{beamer}
 \usepackage{lmodern}
 \usepackage[german]{babel}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenx}
+\usepackage{listings}
+\usepackage{wrapfig}
+\usepackage{hyperref}
+\usepackage{color}
+\usepackage{lscape}
+\usepackage{courier}
+
+
+\definecolor{javared}{rgb}{0.6,0,0} % for strings
+\definecolor{javagreen}{rgb}{0.25,0.5,0.35} % comments
+\definecolor{javapurple}{rgb}{0.5,0,0.35} % keywords
+\definecolor{javadocblue}{rgb}{0.25,0.35,0.75} % javadoc
+ 
+\lstset{language=C++,
+keywordstyle=\color{javapurple}\bfseries,
+stringstyle=\color{javared},
+commentstyle=\color{javagreen},
+morecomment=[s][\color{javadocblue}]{/**}{*/},
+tabsize=2,
+showspaces=false,
+showstringspaces=false,
+basicstyle=\scriptsize\ttfamily}
+
+
+
 
 
 \title{C++ SFINAE}   
@@ -60,10 +85,10 @@
 \item Eine Menge von überladenenen Funktionen
 \item Alle sind Kandidaten für einen potentiellen Funktions-Aufruf
 \item Mindestens eine dieser Funktion ist ein Funktions-Template
-\item Die Template-Argumente werden deduziert
+\item Die Template-Argumente werden deduziert\footnote{\url{http://en.cppreference.com/w/cpp/language/template_argument_deduction}}
 \item Hierbei ergibt sich ein auf dem deduzierten Template-Typ beruhender Fehler in der Funktions-Schnittstelle
 \begin{itemize}
-\item Ein "Failure" beruhend auf der "Substitution"
+\item Ein \glqq{}Failure\grqq{} beruhend auf der \glqq{}Substitution\grqq
 \end{itemize}
 \end{itemize}
 
@@ -84,17 +109,162 @@
 \end{frame}
 
 
+\section{Ende} 
+%\subsection{Listen I}
+\begin{frame}
+\frametitle{Das war's}
+\begin{itemize}
+\item \glqq{} substitution failure is not an error\grqq
+\item Fertig
+\end{itemize}
+\end{frame}
 
 
+\section{Beispiele1} 
+%\subsection{Listen I}
+\begin{frame}
+\frametitle{C++ SFINAE - Beispiel I}
+
+\begin{itemize}
+\item Also eine Menge von überladenen Funktionen
+\begin{itemize}
+\item Alle sind Kandidaten für einen potentiellen Funktions-Aufruf
+\end{itemize}
+
+\item Mindestens eine dieser Funktion ist ein Funktions-Template
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{C++ SFINAE - Beispiel I}
+\begin{lstlisting}
+void print(long l) 
+{ 
+   cout << "l: " << l << endl; 
+}
+
+template<class T> void print(T t)
+{
+   cout << "T: " << t << endl;
+}
+
+template<class T> void print(T* t)
+{
+   cout << "T*: " << *t << endl;
+}
+\end{lstlisting}
 
 
+\begin{lstlisting}
+int n = 42;
+print(n);    // => T: 42
+print(&n);   // => T*: 42
+print(43L);  // => l: 43
+\end{lstlisting}
+\end{frame}
 
 
+\section{Beispiel1Fortsetzung}
+\begin{frame}
+\frametitle{C++ SFINAE - Beispiel 1 - Fortsetzung}
+
+\begin{itemize}
+\item Die Template-Argumente werden deduziert
+\item Hierbei ergibt sich ein auf dem deduzierten Template-Typ beruhender Fehler in der Funktions-Schnittstelle
+\begin{itemize}
+\item Ein \glqq{}Failure\grqq{} beruhend auf der \glqq{}Substitution\grqq{}
+\end{itemize}
+
+\item => Dies ist dann kein Compiler-Fehler
+\begin{itemize}
+\item Substitution Failure is not an Error
+\item Das Funktions-Template wird einfach aus der Menge der Kandidaten entfernt
+\item SFINAE  schlägt während der Funktions-Überladen Auflösung zu
+\end{itemize}
+
+\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{C++ SFINAE - Beispiel I - Fortsetzung}
+\begin{lstlisting}
+void print(long l){ cout << "l: " << l << endl; }
+
+template<class T> void print(T t){ cout << "T: " << t << endl; }
+
+template<class T> void print(T* t){ cout << "T*: " << *t << endl; }
 
 
+// Zusaetzlich
+
+template<class T> void print(typename T::type t)
+{
+   cout << "T::type: " << t << endl;
+}
+
+// => Kein Problem
+\end{lstlisting}
 
 
+\begin{lstlisting}
+int n = 42;
+print(n);    // => T: 42
+print(&n);   // => T*: 42
+print(43L);  // => l: 43
+\end{lstlisting}
+\end{frame}
 
+\begin{frame}[fragile]
+\frametitle{C++ SFINAE - Beispiel 1 - Fortsetzung}
+
+\begin{itemize}
+\item SFINAE wurde genau dafür eingeführt
+\item Bestehender Code sollte nicht ungültig werden, wenn zusätzlich (z.B. durch einen erweiterten Header) ein Funktions-Template in die Menge der potentiellen Aufruf-Kandidaten hinzukommt, das nach der Typ-Deduktion nicht \glqq{}okay\grqq{} ist.
+\end{itemize}
+
+\begin{lstlisting}
+// Zusaetzlich
+
+template<class T> void print(typename T::type t)
+{
+   cout << "T::type: " << t << endl;
+}
+
+// => Kein Problem
+\end{lstlisting}
+
+\end{frame}
+
+
+\begin{frame}[fragile]
+\frametitle{C++ SFINAE}
+Ganz nebenbei:
+
+\begin{itemize}
+\item Wie spricht man unser neues Funktions-Template an?
+\end{itemize}
+
+\begin{lstlisting}
+struct A
+{
+   typedef bool type;
+};
+
+int main()
+{
+   cout << boolalpha;
+
+   int n = 42;
+   print(n);         // => T: 42
+   print(&n);        // => T*: 42
+   print(43L);       // => long: 43
+   print(false);     // => T: false
+   print<A>(true);   // => T::type: true
+}
+\end{lstlisting}
+
+\end{frame}
 
 
 \end{document}
