--- a/Präsentation/Präsentation.tex
+++ b/Präsentation/Präsentation.tex
@@ -59,7 +59,7 @@ basicstyle=\scriptsize\ttfamily}
 
 \item Im Standard gibt es den Begriff nicht
 \begin{itemize}
-\item Der Standard beschreibt in § 14.8.2\footnote{\url{https://isocpp.org/std/the-standard}} den Sachverhalt
+\item Der Standard beschreibt in § 14.8.2\footnote{\url{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2011/n3242.pdf}} den Sachverhalt
 \item Ohne aber ein explizites Acronym zu verwenden
 \end{itemize}
 
@@ -386,6 +386,12 @@ template<class T> void print(T t)
 \end{frame}
 
 
+\section{Ende}
+\begin{frame}
+\frametitle{Ende}
 
+Vielen Dank für die Aufmerksamkeit
+
+\end{frame}
 
 \end{document}
